# siren-sculpture-code

./: .env.example  .gitignore  README.md  index.html  manifest.webmanifest  pi-status.sh  pwa.css  pwa.js  pyproject.toml  service-worker.js  site.css  site.js  sync-on-pi.sh  sync-to-pi.sh  sync.env.example
config/: logrotate-sculpture
rpi-ble-wifi-provisioning/: .gitignore  README.md  pyproject.toml
rpi-ble-wifi-provisioning/tests/: test_ble_service.py  test_network.py  test_provisioning_config.py
rpi-ble-wifi-provisioning/web-bluetooth/: provisioning.html
siren-sculpture-code/: .env.example  .gitignore  README.md  pi-status.sh  pyproject.toml  requirements.txt  sync-to-pi.sh  sync.env
siren-sculpture-code/scripts/: backup-logs.sh  check-bluetooth-preflight.sh  check-service-conflicts.sh  configure-bluetooth.sh  configure-connect.sh  configure-low-power.sh  configure-networkmanager.sh  deploy.sh  disable-services.sh  initialize-pi.sh  install.sh  make-release-image.sh  migrate_legacy_wifi.py  sculpture-login-banner.sh  sync-to-pi.sh
siren-sculpture-code/tests/: test_audio_device_selection.py  test_ble_control.py  test_ble_gateway.py  test_config.py  test_control.py  test_install_layout.py  test_logging_config.py  test_login_banner.py  test_migrate_legacy_wifi.py  test_player.py  test_provisioning_config.py  test_schedule.py  test_sync_on_pi.py  test_systemd_units.py  test_web_control.py  test_web_pwa.py  test_web_site.py  test_wittypi.py  test_wittypi_clock_policy.py
siren-sculpture-code/web-bluetooth/: provisioning.html  siren-control.html
(+53 files in other folders)
