[project]
name = "rpi-ble-wifi-provisioning"
version = "0.1.0"
description = "Wi-Fi provisioning handler for the sculpture's shared BLE gateway."
requires-python = ">=3.9"
dependencies = [
    "PyYAML",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "provisioning"}

[tool.setuptools.packages.find]
where = ["provisioning"]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "provisioning"]
